--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ h1#instruction {
         text-align: center;
     }
 
-    .modal-content {
+    .modal {
         margin: 0 0 1rem 1rem;
     }
   }
