--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ h1#instruction {
     position: fixed;
     top: 0;
     left: 0;
-    width: 90%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -163,10 +163,9 @@ h1#instruction {
 }
 
 .modal-content p {
-    margin-top: 2rem;
+    margin: 2rem 1rem;
     text-align: center;
     font-size: 2rem;
-    margin-bottom: 1rem;
     cursor: default;
 }
 
